--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,14 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon-dg.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>projeto-visual</title>
   </head>
   <body>
     <div id="root"></div>
+    <!-- Elfsight Instagram Feed script -->
+    <script src="https://elfsightcdn.com/platform.js" async></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
